test/tests/compiler/11_long_integers/valid/explicit_casts/plx1_cast_ternary.plx
pub fn main(none) i32 {
    return cast<i32>(? 10 > 20 then 1 else -17179869184l)
}
