test/tests/compiler/11_long_integers/invalid_parse/invalid_cast.plx
pub fn main(none) i32 {
    # A cast expression can only contain type specifiers,
    # not storage class specifiers
    #
    return cast<data i32>(10)
}
